[package]
name = "positron-edr"
version = "0.1.0"
edition = "2024"
description = "Cross-platform Endpoint Detection and Response system"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
#For Timestamping the events
chrono = {version = "0.4", features = ["serde"]}